<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/subscribe_layout_login_infos"

        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin"

        android:src="@mipmap/ic_launcher"/>


    <LinearLayout
        android:id="@+id/subscribe_layout_login_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/subscribe_text_view_create"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/new_member_text_welcome"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"

            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/subscribe_edit_text_login_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/login_edit"
                android:nextFocusDown="@+id/subscribe_edit_text_passwd_again"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >

            <EditText
                android:id="@+id/subscribe_edit_text_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/passwd_edit"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >

            <EditText
                android:id="@+id/subscribe_edit_text_passwd_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/passwd_edit_again"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/subscribe_button_create"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"

            android:enabled="false"
            android:text="@string/button_create"
            android:textColor="@color/white"/>


    </LinearLayout>


</RelativeLayout>